implemented routes and small UI to showcase routes
